# display-top10-ranking

./: .pre-commit-config.yaml  README.md  _config.yml  fetch_data.py  pyproject.toml
.github/workflows/: update-data.yml
docs/: index.html
docs/data/: models-ranking-results.json  my-run-id.json  res-2.json  res-3.json  testing-metrics.json  top_foods.json
src/: fetch_result_ddb.py  write_result_ddb.py
